@@ -1287,6 +1287,9 @@
       "hunt": "({{index}}) Hunt"
     },
     "descriptions": {
+      "just_bet": "{{emoji}} Bet on _{{specification}}_ **{{count}}** times. ({{has}}/{{need}})",
+      "just_bet-one": "{{emoji}} Bet on _{{specification}}_ **{{count}}** time. ({{has}}/{{need}})",
+      "just_bet-other": "{{emoji}} Bet on _{{specification}}_ **{{count}}** times. ({{has}}/{{need}})",
       "win_bet": "{{emoji}} Win _{{specification}}_ matches **{{count}}** times. ({{has}}/{{need}})",
       "win_bet-one": "{{emoji}} Win _{{specification}}_ matches **{{count}}** time. ({{has}}/{{need}})",
       "win_bet-other": "{{emoji}} Win _{{specification}}_ matches **{{count}}** times. ({{has}}/{{need}})",
